# sales_service/src/main/java/com/mpraviap/sales_service/application/dto/DetailResponseDto.java
@@ -2,12 +2,13 @@ package com.mpraviap.sales_service.application.dto;
 
 import lombok.Data;
 
+import java.util.List;
 
 
 @Data
 public class DetailResponseDto {
-    private String id;
-    private String quantities;
-    private String subTotal;
-    private ProductDto products;
+    private String productCode;
+    private String productName;
+    private Integer quantities;
+    private double subTotal;
 }
